<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lallosocktest</string>
    <string name="pref_server_ip_title">IP Server</string>
    <string name="pref_server_ip_content">Inserisci l\'IP del server.</string>
    <string name="pref_server_port_title">Porta Server</string>
    <string name="pref_server_port_content">Inserisci la porta di comunicazione del socket</string>
    <string name="pref_server_configuration_screen">Configurazione Server</string>
    <string name="pref_comandi_configuration_screen">Configurazione comandi</string>
    <string name="pref_comando_1_title">Bottone 1</string>
    <string name="pref_comando_2_title">Bottone 2</string>
    <string name="pref_comando_3_title">Bottone 3</string>
    <string name="pref_comando_4_title">Bottone 4</string>
    <string name="pref_comando_5_title">Bottone 5</string>      
    <string name="pref_comando_button_title">Stringa sul Bottone</string>
    <string name="pref_comando_comando_title">Stringa comando</string>
    <string name="menu_settings">Settings</string>
    <string name="bottonetest">Test Button</string>
    <string name="errore">Errore:\n\n</string>
   
</resources>